# hhtools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_cn.md  framework.md  pyproject.toml
.github/workflows/: ci.yml
assets/reference_poses/: soma_zero_frame0.bvh  xsens_mocap_zero_frame0.bvh
configs/analysis/: catalog.yaml  default.yaml
configs/app/: default.yaml
configs/body_models/: README.md
configs/hhtools_adapter/: k1_22dof.yaml  t1_23dof.yaml
configs/robots/_template/: README.md  robot.yaml
configs/skeleton_presets/: canonical_human.yaml
configs/skeleton_presets/alias_maps/: _example.yaml  xsens_mocap.yaml
hhtools/: __init__.py
hhtools/analysis/: __init__.py  canonical.py  catalog.py  clip.py  cluster.py  collection.py  config.py  embedding.py  metrics.py  scene_metrics.py  subset.py  tags.py
hhtools/bodymodels/: __init__.py  compat.py  download.py  engine.py  layout.py  params.py  paths.py
hhtools/cli/: __init__.py  bodymodel.py  convert.py  dataset.py  main.py  retarget.py  robot.py  ui.py  web.py
hhtools/core/: __init__.py  animation_buffer.py  coord.py  grounding.py  hierarchy.py  motion.py  resample.py  scene.py  simplify.py  skeleton.py  skinning.py
hhtools/core/math/: __init__.py  quaternion.py  rotation.py  transform.py  vector.py
hhtools/dataconvert/: __init__.py  contacts.py  convert.py  csv_io.py  fullstate.py  isaaclab_txt.py  mjcf_model.py  profiles.py  serialize.py  speeds.py
hhtools/human/: __init__.py  capsule_mesh.py
hhtools/io/: __init__.py  base.py  bvh.py  bvh_detect.py  glb.py  loader_progress.py  mimic_detect.py  npz.py  parc_export.py  parc_import.py  parc_ms_skeleton.py  robot_csv.py
hhtools/io/data/: parc_ms_skeleton_reference.npz
hhtools/io/datasets/: __init__.py  _engine_cache.py  amass.py  base.py  bvh_folder.py  glb_folder.py  hmr4d.py  meshmimic_holosoma.py  motion_x.py  omomo.py  parc_ms.py  phuma.py  unified_npz_folder.py
hhtools/retarget/: __init__.py  retarget_result.py  robot_to_robot.py
hhtools/retarget/calibration/: __init__.py  calibration.py  reference.py
hhtools/retarget/interaction_mesh/: __init__.py  collision.py  config.py  contact_points.py  heightfield.py  laplacian_geometry.py  motion_bridge.py  mpc_loop.py  mujoco_jacobians.py  mujoco_scene.py  pipeline.py  qp_step.py
hhtools/retarget/newton_basic/: __init__.py  _warp_config.py  batch_limits.py  config.py  feet_stabilizer.py  ground_collision_bodies.py  heading_align.py  human_aliases.py  ik_collision_objective.py  ik_objectives.py  joint_limit_clamper.py  pipeline.py  rest_pose.py  robot_model.py  scaler.py
hhtools/robot/: __init__.py  arm_geometry.py  base.py  dof_schema.py  foot_geometry.py  joint_scales.py  kinematics.py  loader.py  registry.py  retarget_profile.py  scaffold.py  standing_height.py  urdf_normalize.py  yaml_io.py
hhtools/utils/: __init__.py  paths.py
hhtools/viewer/: __init__.py  anatomy.py  app.py  cache.py  library.py  theme.py
hhtools/viewer/panels/: __init__.py  playback.py
hhtools/viewer/renderers/: __init__.py  capsule_mesh.py  objects.py  reference_skeleton.py  robot_animator.py  scaled_skeleton.py  skeleton.py  skinned_mesh.py  terrain_hf.py
hhtools/web/: __init__.py  batch_failure_log.py  calibration_session.py  dataset_analysis.py  export_bundle.py  motion_library_links.py  motion_progress.py  r2r_export_bundle.py  r2r_scene.py  r2r_upload_resolve.py  scaled_preview.py  serialize.py  server.py  upload_resolve.py
hhtools/web/static/: app.js  dataset_viz.js  index.html  style.css  tutorial.js
scripts/: audit_yellow_overlay_alignment.py  batch_dec_release_to_parc_ms.py  batch_parc_ms_retarget.py  batch_robot_audit.py  convert_hhtools_csv_to_mjlab_npz.py  preview_npz.py
tests/dataconvert/: test_isaaclab_txt_export.py  test_mjcf_serialize.py
tests/retarget/: test_batch_limits.py
tests/robot/: test_kinematics_audit_migration.py  test_retarget_profile.py  test_urdf_floating_base.py  test_urdf_mujoco_compiler.py
tests/web/: test_export_bundle_objects.py  test_scaled_overlay_terrain.py
