[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hhtools"
dynamic = ["version"]
description = "human-humanoid-tools (hhtools): 30-second human-to-humanoid retargeting for parkour, dance, and interaction datasets."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "hhtools contributors" }]
keywords = [
    "motion-capture",
    "retargeting",
    "humanoid",
    "robotics",
    "smpl",
    "smplx",
    "amass",
    "motion-x",
    "bvh",
    "glb",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    # ruamel.yaml is used to round-trip robot.yaml when the calibration
    # UI writes back a user-edited ik_map, preserving hand-authored
    # comments and key order that pyyaml's safe_dump would flatten.
    "ruamel.yaml>=0.18",
    "pydantic>=2.6",
    "trimesh>=4.3",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
viewer = [
    "viser>=0.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]
# Modern HTML / three.js front-end (replaces the Viser viewer). Includes robot
# + SMPL deps the UI needs (URDF load, AMASS mesh baking). Retarget IK still
# needs the separate ``retarget`` extra (``uv sync --extra web --extra retarget``).
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "yourdfpy>=0.0.56",
    "mujoco>=3.1",
    "smplx>=0.1.28",
    "torch>=2.2",
    # SMPL/SMPL-H .pkl weights need chumpy to unpickle (see smpl extra below).
    "chumpy>=0.70",
    "pygltflib>=1.16",
    # interaction-mesh retarget on terrain/objects needs OSQP for the hard
    # non-penetration QP sub-problem; the web UI exposes that backend.
    "osqp>=0.6",
]
formats = [
    "pygltflib>=1.16",
]
smpl = [
    "smplx>=0.1.28",
    "torch>=2.2",
    # MPI's SMPL / SMPL-H .pkl weights are pickled with chumpy arrays; without
    # chumpy importable, smplx cannot unpickle them (GVHMR / AMASS SMPL-H fail).
    "chumpy>=0.70",
]
robot = [
    "yourdfpy>=0.0.56",
    "mujoco>=3.1",
    "osqp>=1.0",
]
retarget = [
    "warp-lang>=1.3",
    # Newton is installed manually per NVIDIA's instructions; declared loosely here.
    "newton",
]
# Laplacian MPC/SQP interaction-mesh backend (MuJoCo; dense KKT by default, optional OSQP Python API).
retarget-interaction = [
    "yourdfpy>=0.0.56",
    "mujoco>=3.1",
    "warp-lang>=1.3",
    "newton",
    "osqp>=0.6",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "hhtools[web,viewer,formats,smpl,robot,retarget,retarget-interaction]",
]

[project.scripts]
hhtools = "hhtools.cli.main:app"

[project.urls]
Homepage = "https://github.com/CAU-Qinghe/hhtools"
Repository = "https://github.com/CAU-Qinghe/hhtools"
Issues = "https://github.com/CAU-Qinghe/hhtools/issues"
Documentation = "https://github.com/CAU-Qinghe/hhtools/blob/main/framework.md"

[tool.uv]
# chumpy 0.70's legacy setup.py imports `pip` at build time but doesn't declare
# it as a build dependency, so a default isolated build fails under uv. Inject
# the build backend deps so `uv sync --extra smpl` (or web) can build it.
extra-build-dependencies = { chumpy = ["pip", "setuptools", "wheel"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["hhtools*"]
exclude = ["assets*", "configs*"]

[tool.setuptools.package-data]
hhtools = [
    "py.typed",
    "io/data/*.npz",
    "web/static/*",
    "web/static/**/*",
]

[tool.setuptools.dynamic]
version = { attr = "hhtools._version.__version__" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "PL"]
ignore = [
    "PLR0913",
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "N812",
    "B008",    # Typer's idiomatic pattern: typer.Option(...) in defaults.
    "SIM105",  # `contextlib.suppress` is more verbose than a 3-line try/except/pass.
    "SIM108",  # Ternaries aren't always more readable.
    "SIM114",  # Combining branches hides intent in parser code.
    "PLW2901", # Loop variable overwrites are often intentional in parser code.
    "PLC0415", # Lazy imports are intentional (optional deps, circular avoidance).
    "N806",    # Uppercase math-style variables like T/F/J are conventional here.
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
